[metadata]
name = trove
version = 2014.1
summary = OpenStack DBaaS
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    trove

[entry_points]
console_scripts = 
    trove-api = trove.cmd.api:main
    trove-taskmanager = trove.cmd.taskmanager:main
    trove-mgmt-taskmanager = trove.cmd.taskmanager:mgmt_main
    trove-conductor = trove.cmd.conductor:main
    trove-manage = trove.cmd.manage:main
    trove-guestagent = trove.cmd.guest:main
    trove-fake-mode = trove.cmd.fakemode:main

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
