[metadata]
name = trove
summary = OpenStack DBaaS
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/trove/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
data_files =
    etc/trove =
        etc/trove/api-paste.ini
packages =
    trove

[entry_points]
console_scripts =
    trove-api = trove.cmd.api:main
    trove-taskmanager = trove.cmd.taskmanager:main
    trove-mgmt-taskmanager = trove.cmd.taskmanager:mgmt_main
    trove-conductor = trove.cmd.conductor:main
    trove-manage = trove.cmd.manage:main
    trove-guestagent = trove.cmd.guest:main
    trove-fake-mode = trove.cmd.fakemode:main
    trove-status = trove.cmd.status:main

trove.api.extensions =
    mgmt = trove.extensions.routes.mgmt:Mgmt
    mysql = trove.extensions.routes.mysql:Mysql

trove.guestagent.module.drivers =
    ping = trove.guestagent.module.drivers.ping_driver:PingDriver
    new_relic_license = trove.guestagent.module.drivers.new_relic_license_driver:NewRelicLicenseDriver

# These are for backwards compatibility with Havana notification_driver configuration values
oslo.messaging.notify.drivers =
    trove.openstack.common.notifier.log_notifier = oslo_messaging.notify._impl_log:LogDriver
    trove.openstack.common.notifier.no_op_notifier = oslo_messaging.notify._impl_noop:NoOpDriver
    trove.openstack.common.notifier.rpc_notifier2 = oslo_messaging.notify.messaging:MessagingV2Driver
    trove.openstack.common.notifier.rpc_notifier = oslo_messaging.notify.messaging:MessagingDriver
    trove.openstack.common.notifier.test_notifier = oslo_messaging.notify._impl_test:TestDriver

oslo.policy.policies =
    # The sample policies will be ordered by entry point and then by list
    # returned from that entry point. If more control is desired split out each
    # list_rules method into a separate entry point rather than using the
    # aggregate method.
    trove = trove.common.policies:list_rules

[global]
setup-hooks =
    pbr.hooks.setup_hook

[compile_catalog]
directory = trove/locale
domain = trove

[update_catalog]
domain = trove
output_dir = trove/locale
input_file = trove/locale/trove.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = trove/locale/trove.pot

[wheel]
universal = 1
